--- a/FullEditText/res/layout/activity_main.xml
+++ b/FullEditText/res/layout/activity_main.xml
@@ -2,27 +2,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
     <com.wxp.fulledittext.FullText
         android:id="@+id/id_edit_main_et"
+        android:padding="0dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="2dp"
-        android:background="#00000000"
+        android:layout_height="wrap_content"
         android:focusable="true"
         android:gravity="top"
-        android:inputType="textMultiLine"
-        android:maxLines="22"
         android:singleLine="false"
-        android:text="@string/hello_world"
-        android:textSize="30dp" />
+        android:layout_marginRight="15sp"
+        />
 
 </RelativeLayout>
